syntax = "proto3";
package pizzamouse;

option go_package = "github.com/fnatte/pizza-mouse/internal";

enum Building {
  KITCHEN = 0;
  SHOP = 1;
  HOUSE = 2;
  SCHOOL = 3;
}

message Employer {
  int32 maxWorkforce = 1;
}

message BuildingInfo {
  optional Employer employer = 1;
}
